fix: cards spacing correction

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -44,8 +44,9 @@
   font-weight: 300;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   .card {
-    flex: 0 0 29%;
+    flex: 0 0 30%;
     background-color: #e1e1e1;
     border-radius: 5px;
   }
